add content on the CBL form

--- a/app/views/forms/housing/CBLNI.html
+++ b/app/views/forms/housing/CBLNI.html
@@ -62,7 +62,7 @@
       }) }}
     </div>
 </div>
-<div class="design-notes-box">
+<div class="UR-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>the actual single checkbox doesn't work (no visual feedback provided)</li>
@@ -71,10 +71,10 @@
       <li>CHECK if this is ok with GDPR: <a href="https://design-system.service.gov.uk/patterns/national-insurance-numbers/" target="_blank" rel="noopener" >about using the NI</a>: <strong>You shouldn’t use National Insurance numbers to verify a user’s identity.</strong></li>
     </ul>
   </div>
-  <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:</h3>
-    <p>On the actual page, the inputs field is too long - should be reduced</p>
-  </div>
 
+  <div class="IT-notes-box">
+      <h3 class="govuk-heading-s">IT notes:</h3>
+      <p>On the actual page, the inputs field is too long - should be reduced</p>
+    </div>
 
 {% endblock %}
