--- a/app/views/forms/housing/CBLadd-children.html
+++ b/app/views/forms/housing/CBLadd-children.html
@@ -379,11 +379,11 @@
       {{ govukButton({
         text: "Continue",
         classes: "button-primary",
-        href: "/forms/housing/CBLinfo.html"
+        href: "/forms/housing/CBLlegal.html"
       }) }}
 
 
-      <div class="design-notes-box">
+      <div class="UR-notes-box">
           <h3 class="govuk-heading-s">Design notes:</h3>
          <p>Wording would probably change - need to be seen by Sharon and approved by Housing</p>
       </div>
