--- a/app/views/forms/housing/CBLadd-person-alt.html
+++ b/app/views/forms/housing/CBLadd-person-alt.html
@@ -831,11 +831,11 @@
       }) }}
 
 
-      <div class="design-notes-box">
-          <h3 class="govuk-heading-s">Design notes:</h3>
-         <p>We can then ask about pregnancy, and joint applicant after.</p>
-      </div>
     </div>
+</div>
+<div class="UR-notes-box">
+    <h3 class="govuk-heading-s">Design notes:</h3>
+   <p>We can then ask about pregnancy, and joint applicant after.</p>
 </div>
 
 {% endblock %}
