--- a/app/views/forms/housing/CBLcontact.html
+++ b/app/views/forms/housing/CBLcontact.html
@@ -67,12 +67,12 @@
     
           {{ govukButton({
             text: "Continue",
-            href: "/forms/housing/CBLinfo-housed.html",
+            href: "/forms/housing/CBLdob.html",
             classes: "button-primary"
           }) }}
     </div>
 </div>
-<div class="design-notes-box">
+<div class="UR-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <p>There is two guidance sentences at the moment, one above one below the attorney details boxes. Needs to be changed (Content decision and then IT fix)</p>
 </div>
