--- a/app/views/forms/housing/CBLinfo-housed.html
+++ b/app/views/forms/housing/CBLinfo-housed.html
@@ -25,7 +25,7 @@
           }) }}
     </div>
 </div>
-<div class="design-notes-box">
+<div class="UR-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>this is a possible information page to add to provide guidance about the pages coming after (info about each person living with the main applicant)</li>
@@ -34,7 +34,7 @@
     </ul>
     <p><strong>There are a lot of potential flaws the moment:</strong></p>
     <ul class="govuk-list govuk-list--bullet">
-      <li>should the main applicant add themselves here?</li>
+      <li>should the main applicant add themselves here? - I assumed not so captured the info previously (DOB and gender)</li>
       <li>where do you enter children living with you permanently?</li>
       <li>pregnancy: what if it's twins or more? teen pregnancy? main applicant is pregnant?</li>
       <li>number for the adult label: There is an 'adult 1' on the 'pregnancy page' and the same number appear on the 'not pregnant' page = confusing!</li>
