--- a/app/views/forms/housing/CBLpostcode.html
+++ b/app/views/forms/housing/CBLpostcode.html
@@ -65,7 +65,7 @@
       </form>
     </div>
 </div>
-<div class="design-notes-box">
+<div class="UR-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>the actual single checkbox doesn't work (no visual feedback provided)</li>
