--- a/app/views/forms/menu-forms.html
+++ b/app/views/forms/menu-forms.html
@@ -18,7 +18,7 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="education/P1-start.html">a possible version of registering P1 children</a> <strong class="govuk-tag info">last update: 27/11 evening</strong></li><br>
-        <li><a href="housing/CBLstart.html"> simplified CBL (for illustration)</a></li>
+        <li><a href="housing/CBLstart.html"> simplified CBL</a> <strong class="govuk-tag info">last update: 27/11 evening</strong></li>
         <!--li><a href="housing/start.html">a very rough illustration of a form for housing (DRAFT)</a></li-->
       </ul>
 
