--- a/app/views/forms/housing/CBLaboutyou.html
+++ b/app/views/forms/housing/CBLaboutyou.html
@@ -70,10 +70,10 @@
 
     </div>
 </div>
-<div class="design-notes-box">
+<div class="UR-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li>we don't capture the gender of the applicant, what if it's a woman and she is pregnant?</li>
+      <li>we don't capture the gender or DOB of the applicant, what if it's a woman and she is pregnant?</li>
       <li>should email be optional?</li>
       <li>as the form is really long, we should probably group all these questions on one page as they are easy and all related to the applicant</li>
     </ul>
