--- a/app/views/forms/housing/CBLstart.html
+++ b/app/views/forms/housing/CBLstart.html
@@ -30,7 +30,7 @@
       {{ govukButton({
         text: "Start now",
         href: "/forms/housing/CBL16.html",
-        classes: "govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8"
+        classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8"
       }) }}
 
       <h2 class="govuk-heading-m erc-text-blue">Before you start</h2>
@@ -41,7 +41,7 @@
       </p>
     </div>
 </div>
-<div class="design-notes-box">
+<div class="UR-notes-box">
     <h3 class="govuk-heading-s">General notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>Guidance should be under the label and above the input field, radio buttons/checkboxes</li>
