add comment and changes following UR 28/11 for P1

--- a/app/assets/sass/ERC.scss
+++ b/app/assets/sass/ERC.scss
@@ -192,7 +192,7 @@ body p {
     p, h3, li {
         color: #a94442;
     }
-     display: none
+    // display: none
 }
 .IT-notes-box{
     border: solid 1px #bcdff1;
