--- a/app/views/forms/education/P1-start.html
+++ b/app/views/forms/education/P1-start.html
@@ -74,7 +74,15 @@
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-        <li>This content will change to something which describes all the step of the application and enrolment - needs to be signed off by Education</li> 
+        <li>This content will change again - we'll need to separate step 1 and 2 on different pages</li> 
+    </ul>
+</div>
+<div class="UR-notes-box">
+    <h3 class="govuk-heading-s">User Research notes:</h3>
+    <ul class="govuk-list govuk-list--bullet">
+        <li>no one saw the warning about using the back link only...</li> 
+        <li>one opened the admission policy link and was confused about it being also for secondary</li>
+        <li>making a placing request also confused her</li>
     </ul>
 </div>
 
