--- a/app/views/forms/education/child-dob.html
+++ b/app/views/forms/education/child-dob.html
@@ -60,7 +60,7 @@
     <ul class="govuk-list govuk-list--number">
       <li>check the 3 fields have been completed, if not, error is: Enter your child birth date</li>
       <li>check if the date is valid date (for example: no 31 of April), if not, error is: The date is not valid</li> 
-      <li>check the date is within the range 01/03/2013 – 28/02/2015  - <strong>content for error messages needed</strong></li>
+      <li>check the date is within the range 01/03/2013 – 28/02/2015 if not: Date must be between 1 03 2013 and 28 02 2015 </li>
   </ul>
 </div>
 
