--- a/app/views/forms/education/confirmation.html
+++ b/app/views/forms/education/confirmation.html
@@ -49,9 +49,16 @@
     </div>
   </div>
   <div class="alt-notes-box">
-      <h3 class="govuk-heading-s">Design notes:</h3>
       <ul class="govuk-list govuk-list--bullet">
           <p><a href="/forms/education/confirmation1.html"><strong>see with an email</strong></a></p>
+      </ul>
+  </div>
+  <div class="UR-notes-box">
+      <h3 class="govuk-heading-s">User research:</h3>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>one didn't see the button</li>
+        <li>all expect to receive an email with all the info from the summary on it .... and the next steps</li>
+        <li>all surprised to be back on the first page</li>
       </ul>
   </div>
 {% endblock %}
