--- a/app/views/forms/education/declaration1.html
+++ b/app/views/forms/education/declaration1.html
@@ -56,11 +56,17 @@
       </form>
     </div>
 </div>
-<!--div class="design-notes-box">
+<div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
-    <p>This is new content - needs to be signed off by Education</p>
-    <p>We need content for an error message - just a place holder for now</p>
-    <p>To see an <a href="/forms/education/declaration.html">alternative with radio buttons</a></p>
-</div-->
+    <ul class="govuk-list govuk-list--bullet">
+        <li>Good to go - no one had a problem with it - Sharon to confirm use of ERC</li> 
+    </ul>
+</div>
+<div class="UR-notes-box">
+    <h3 class="govuk-heading-s">User Research notes:</h3>
+    <ul class="govuk-list govuk-list--bullet">
+        <li>no one had read the ERC's admission policy</li> 
+    </ul>
+</div>
 
 {% endblock %}
