--- a/app/views/forms/education/info.html
+++ b/app/views/forms/education/info.html
@@ -32,10 +32,11 @@
 </div>
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
-    <p>The content is new but still been worked on, we will refer to the original application form , this is just to illustrate that we will address the priorities grouped after this point, with some guidance here. </p>
-    <p>After this page, we remove all texts which was there previously mentioning "if your catchment school is full" to avoid adding stress by repetition.</p>
-    <p>Heather's note: with this statement it would be helpful to refer the applicant to the policy again</p>
-    <p>We might explain None option here - in reference to paragraph 3? </p>
+    <p>good to go</p>
+</div>
+<div class="UR-notes-box">
+    <h3 class="govuk-heading-s">User Research notes:</h3>
+    <p>users didn't really read it...</p>
 </div>
 
 {% endblock %}
