--- a/app/views/forms/education/medical-details.html
+++ b/app/views/forms/education/medical-details.html
@@ -33,5 +33,11 @@
       </form>
     </div>
 </div>
+<div class="design-notes-box">
+    <h3 class="govuk-heading-s">Design notes:</h3>
+    <ul class="govuk-list govuk-list--bullet">
+        <li>good to go </li>
+    </ul>
+</div>
 
 {% endblock %}
