--- a/app/views/forms/education/medical.html
+++ b/app/views/forms/education/medical.html
@@ -22,7 +22,7 @@
         value: data['medical'],
         fieldset: {
           legend: {
-            text: "Does your child have a medical condition only this school can support?",
+            text: "Does your child have a medical condition only the catchment school can support?",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--m"
           }
@@ -46,5 +46,10 @@
       </form>
     </div>
 </div>
-
+<div class="design-notes-box">
+    <h3 class="govuk-heading-s">Design notes:</h3>
+    <ul class="govuk-list govuk-list--bullet">
+        <li>good to go </li>
+    </ul>
+</div>
 {% endblock %}
