--- a/app/views/forms/education/sibling.html
+++ b/app/views/forms/education/sibling.html
@@ -22,7 +22,7 @@
         value: data['sibling'],
         fieldset: {
           legend: {
-            text: "Will you have another child at the school in August 2019?",
+            text: "Will you have a sibling at the school in August 2019?",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--m"
           }
@@ -46,7 +46,13 @@
       </form>
       <div class="design-notes-box">
           <h3 class="govuk-heading-s">Design notes:</h3>
-          <p>New content - not agreed yet by Education </p>   
+          <p>good to go</p>   
+      </div>
+      <div class="UR-notes-box">
+          <h3 class="govuk-heading-s">User Research notes:</h3>
+          <ul class="govuk-list govuk-list--bullet">
+            <li>sibling is better understood!</li>
+          </ul>
       </div>
     </div>
 </div>
