--- a/app/views/forms/housing/CBLNI.html
+++ b/app/views/forms/housing/CBLNI.html
@@ -62,7 +62,7 @@
       }) }}
     </div>
 </div>
-<div class="UR-notes-box">
+<div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>the actual single checkbox doesn't work (no visual feedback provided)</li>
