--- a/app/views/forms/housing/CBLaboutyou.html
+++ b/app/views/forms/housing/CBLaboutyou.html
@@ -70,7 +70,7 @@
 
     </div>
 </div>
-<div class="UR-notes-box">
+<div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>we don't capture the gender or DOB of the applicant, what if it's a woman and she is pregnant?</li>
