--- a/app/views/forms/housing/CBLstart.html
+++ b/app/views/forms/housing/CBLstart.html
@@ -41,9 +41,10 @@
       </p>
     </div>
 </div>
-<div class="UR-notes-box">
+<div class="design-notes-box">
     <h3 class="govuk-heading-s">General notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
+      <li><strong>content for this page is needed</strong></li>
       <li>Guidance should be under the label and above the input field, radio buttons/checkboxes</li>
       <li>Remove the privacy statement on every page as it's on the footer. Might have to be on this page though.</li>
       <li>Back button: only 1 on each page and at the top</li>
