--- a/app/views/forms/education/defer.html
+++ b/app/views/forms/education/defer.html
@@ -44,11 +44,13 @@
         }) }}
 
       </form>
-      <div class="design-notes-box">
-          <h3 class="govuk-heading-s">Design notes:</h3>
-          <p>more guidance might be provided?</p> 
-      </div>
     </div>
+</div>
+<div class="design-notes-box">
+    <h3 class="govuk-heading-s">Design notes:</h3>
+    <ul class="govuk-list govuk-list--bullet">
+        <li>Good to go</li> 
+    </ul>
 </div>
 
 {% endblock %}
