--- a/app/views/forms/menu-forms.html
+++ b/app/views/forms/menu-forms.html
@@ -17,8 +17,8 @@
       </p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li><a href="education/P1-start.html">a possible version of registering P1 children</a> <strong class="govuk-tag info">last update: 27/11 evening</strong></li><br>
-        <li><a href="housing/CBLstart.html"> simplified CBL</a> <strong class="govuk-tag info">last update: 27/11 evening</strong></li>
+        <li><a href="education/P1-start.html">P1 enrolment</a> - version with modification and feedback following UR testing on the 28/11 <strong class="govuk-tag info">last update:</strong>  <strong>28/11 evening</strong></li><br>
+        <li><a href="housing/CBLstart.html"> simplified CBL</a> still working on it <strong class="govuk-tag info">last update:</strong><strong> 28/11 evening</strong></li>
         <!--li><a href="housing/start.html">a very rough illustration of a form for housing (DRAFT)</a></li-->
       </ul>
 
